docs/how-to/hpa/ingress_builtin_hostport.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/insecure-port: "6080"
    kubernetes.io/ingress.class: builtin-hostport
  name: web-ingress
spec:
  rules:
  - host: frontend.org
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /web-frontend/frontend.php
        pathType: Prefix
