docs/how-to/hpa/ingress_vpx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/frontend-ip: '`VPX_VIP`'
    ingress.citrix.com/insecure-port: "80"
    kubernetes.io/ingress.class: cic-vpx
  name: cpx-ingress-vpx
spec:
  rules:
  - host: www.guestbook.com
    http:
      paths:
      - backend:
          service:
            name: cpx-builtin
            port:
              number: 6080
        pathType: Prefix
